[project]
name = "t4_lambda_tabular_preview"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = [
    "pyarrow ~= 18.0",
    "pandas ~= 2.2",
    "xlrd >=2,< 3",
    "openpyxl >=3,<4 ",
    "fsspec[http] >= 2022.1.0",
    "anndata >= 0.8.0",
    "scanpy >= 1.8.0",
    # Stripping numpy.libs in numpy 2 results in
    # libscipy_openblas64_-ff651d7f.so: ELF load command address/offset not properly aligned
    # which is probably caused by some bug in glibc (it happens on Ubuntu 22.04, Amazon Linux 2/2023,
    # but not on Ubuntu 24.04).
    "numpy < 2",
    "t4-lambda-shared",
]

[build-system]
requires = ["uv_build==0.9.*"]
build-backend = "uv_build"

[dependency-groups]
test = [
    "pytest~=8.4",
    "pytest-cov~=7.0",
    "pytest-env~=1.1",
    "pytest-mock~=3.15",
]
prod = [
    "awslambdaric~=2.1",
]

[tool.uv]
default-groups = ["test"]

[tool.uv.sources]
t4-lambda-shared = { url = "https://github.com/quiltdata/quilt/archive/d496dffbfb4b7a2ae05f6c1f7f0cb7d5d43bc984.zip", subdirectory = "lambdas/shared" }
