[project]
name = "t4_lambda_tabular_preview"
version = "0.2.0"
requires-python = ">=3.13"
dependencies = [
    "pyarrow>=18",
    "pandas>=2.2",
    "xlrd>=2,<3",
    "openpyxl>=3,<4",
    "fsspec[http]>=2024.1",
    "anndata[lazy]>=0.10",
    "scanpy>=1.10",
    "numpy>=2.1",
    "t4-lambda-shared",
]

[build-system]
requires = ["uv_build>=0.9,<0.12"]
build-backend = "uv_build"

[dependency-groups]
test = [
    "pytest~=9.0",
    "pytest-cov~=7.0",
    "pytest-env~=1.1",
    "pytest-mock~=3.15",
]
prod = [
    "awslambdaric~=3.1",
]

[tool.uv]
default-groups = ["test"]

[tool.uv.sources]
# editable for local dev; dev-only (prod .zip uses --no-emit-local + separate pip install)
t4-lambda-shared = { path = "../shared", editable = true }
