[project]
name = "t4_lambda_thumbnail"
version = "0.0.1"
requires-python = "~=3.13.0"

dependencies = [
  "imageio~=2.27",
  "numpy~=2.3",
  "pdf2image>=1.13.1,<2",
  "pillow~=11.3",
  "python-pptx>=0.6.21,<0.7",
  "requests>=2.26.0,<3",
  "t4_lambda_shared @ https://github.com/quiltdata/quilt/archive/d496dffbfb4b7a2ae05f6c1f7f0cb7d5d43bc984.zip#subdirectory=lambdas/shared",
  "quilt3~=7.0",
  "bioio~=3.0",
  "bioio-tifffile~=1.3",
  "bioio-ome-tiff~=1.4",
  "bioio-imageio~=1.3",
  "fsspec[http]>=2025.9.0",
  "bioio-czi~=2.4",
]

[build-system]
requires = ["uv_build~=0.9"]
build-backend = "uv_build"

[dependency-groups]
test = [
    "pytest~=8.4",
    "pytest-cov~=7.0",
    "responses~=0.25",
]
prod = [
    "awslambdaric~=3.1",
]

[tool.uv]
default-groups = ["test"]
