[project]
name = "t4_lambda_thumbnail"
version = "0.2.0"
requires-python = ">=3.13"

dependencies = [
  "numpy>=2.1",
  "pillow>=11",
  "python-pptx>=1.0,<2",
  "requests>=2.31,<3",
  "t4-lambda-shared",
  "bioio>=3.0",
  "bioio-czi>=2.4",
  "bioio-tifffile>=1.3",
  "bioio-ome-tiff>=1.4",
  "bioio-imageio>=1.3",
  "pypdfium2>=4,<5",
]

[build-system]
requires = ["uv_build>=0.9,<0.12"]
build-backend = "uv_build"

[dependency-groups]
test = [
    "pytest~=9.0",
    "pytest-cov~=7.0",
    "pytest-mock~=3.15",
    "responses~=0.25",
    "quilt3~=7.0",
]
prod = [
    "awslambdaric~=3.1",
]

[tool.uv]
default-groups = ["test"]

[tool.uv.sources]
t4-lambda-shared = { path = "../shared" }
