[project]
name = "t4_lambda_thumbnail"
version = "0.0.1"
requires-python = "~=3.13.0"

dependencies = [
  "dask[array]~=2026.1",
  "numpy~=2.3",
  "pdf2image>=1.13.1,<2",
  "pillow~=12.2",
  "python-pptx~=1.0.0",
  "requests>=2.26.0,<3",
  "t4-lambda-shared",
  "bioio~=3.0",
  "bioio-base~=3.0",
  "bioio-czi~=2.7",
  "bioio-tifffile~=1.3",
  "bioio-ome-tiff~=1.4",
  "bioio-imageio~=1.3",
]

[build-system]
requires = ["uv_build~=0.9"]
build-backend = "uv_build"

[dependency-groups]
test = [
    "pytest~=9.1",
    "pytest-cov~=7.0",
    "pytest-mock~=3.15",
    "responses~=0.25",
    "quilt3~=7.0",
]
prod = [
    "awslambdaric~=3.1",
]

[tool.uv]
default-groups = ["test"]

[tool.uv.sources]
t4-lambda-shared = { url = "https://github.com/quiltdata/quilt/archive/d496dffbfb4b7a2ae05f6c1f7f0cb7d5d43bc984.zip", subdirectory = "lambdas/shared" }

