[tool.poetry]
name = "quilt3_local_test"
version = "0.1.0"
description = ""
authors = ["quiltdata <contact@quiltdata.io>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
quilt3 = {version = "^5.0.0", extras = ["catalog"]}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
